--- a/app/content/languages/ru_RU.po
+++ b/app/content/languages/ru_RU.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 5.2.x - Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2019-06-13 17:07:37+0000\n"
+"PO-Revision-Date: 2019-08-15 18:30:22+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1017,15 +1017,15 @@ msgstr "Значок блока"
 
 #: wp-includes/js/dist/block-editor.js:7884
 msgid "Align text right"
-msgstr "Выровнять текст вправо"
+msgstr "Выравнивание текста по правому краю"
 
 #: wp-includes/js/dist/block-editor.js:7880
 msgid "Align text center"
-msgstr "Выровнять текст по центру"
+msgstr "Выравнивание текста по центру"
 
 #: wp-includes/js/dist/block-editor.js:7876
 msgid "Align text left"
-msgstr "Выровнять текст влево"
+msgstr "Выравнивание текста по левому краю"
 
 #: wp-includes/js/dist/block-library.js:19127
 msgid "Page Break"
@@ -1908,7 +1908,7 @@ msgstr "Обложка"
 
 #: wp-includes/js/dist/block-library.js:7003
 msgid "Add a block that displays content in multiple columns, then add whatever content blocks you’d like."
-msgstr "Добавьте блок, который отображает контент в нескольких колонках, а затем в этот блок добавьте любые другие блоки с контентом, которые вы хотите."
+msgstr "Добавьте блок, который отображает содержимое в нескольких столбцах, а затем добавьте в него любые другие блоки с желаемым содержимым."
 
 #: wp-includes/js/dist/block-library.js:7135
 msgid "A single column within a columns block."
@@ -3787,7 +3787,7 @@ msgstr "Текущий пользователь может сменить авт
 
 #: wp-includes/rest-api/endpoints/class-wp-rest-posts-controller.php:2277
 msgid "The current user can sticky this post."
-msgstr "Текущий пользователь может сделать эту запись прикрепленной."
+msgstr "Текущий пользователь может сделать эту запись прилепленной."
 
 #: wp-includes/rest-api/endpoints/class-wp-rest-posts-controller.php:2244
 msgid "The current user can publish this post."
@@ -6962,7 +6962,7 @@ msgstr "Защищённую паролем запись нельзя приле
 
 #: wp-includes/rest-api/endpoints/class-wp-rest-posts-controller.php:1069
 msgid "A sticky post can not be password protected."
-msgstr "Прикрепленная запись не может быть защищена паролем."
+msgstr "Прилепленная запись не может быть защищена паролем."
 
 #: wp-includes/rest-api/endpoints/class-wp-rest-posts-controller.php:1065
 msgid "A post can not be sticky and have a password."
